epiar_resources_scriptsdir = $(datadir)/epiar/resources/scripts/
epiar_resources_scripts_DATA = resources/scripts/ai.lua         resources/scripts/commands.lua  resources/scripts/fleet.lua    resources/scripts/missions.lua  resources/scripts/universe.lua resources/scripts/autopilot.lua  resources/scripts/editor.lua     resources/scripts/player.lua    resources/scripts/utilities.lua resources/scripts/landing.lua

