epiar_resources_simulationdir = $(datadir)/epiar/resources/simulation/default/
epiar_resources_simulation_DATA = resources/simulation/default/alliances.xml    resources/simulation/default/gates.xml    resources/simulation/default/planets.xml       resources/simulation/default/weapons.xml resources/simulation/default/commodities.xml  resources/simulation/default/models.xml   resources/simulation/default/simulation.xml resources/simulation/default/engines.xml      resources/simulation/default/outfits.xml  resources/simulation/default/technologies.xml  resources/simulation/default/systems.xml

