epiar_resources_skindir = $(datadir)/epiar/resources/skin/
epiar_resources_skin_DATA = resources/skin/active-tab-left.png       resources/skin/ui_button_pressed.png       resources/skin/ui_scrollbar_handle_down.png \
 resources/skin/active-tab-middle.png     resources/skin/ui_checkbox_blank.png       resources/skin/ui_scrollbar_handle_up.png \
 resources/skin/active-tab-right.png      resources/skin/ui_checkbox_check.png       resources/skin/ui_scrollbar_up.png \
 resources/skin/hud_bar_left.png          resources/skin/ui_dropdown_closed.png      resources/skin/ui_slider_background.png \
 resources/skin/hud_bar_middle.png        resources/skin/ui_dropdown_mouseover.png   resources/skin/ui_slider_bar.png \
 resources/skin/hud_bar_right.png         resources/skin/ui_dropdown_open.png        resources/skin/ui_slider_filled.png \
 resources/skin/hud_hullstr_bar.png       resources/skin/ui_dropdown_selected.png    resources/skin/ui_slider_handle.png \
 resources/skin/hud_hullstr_leftbar.png   resources/skin/ui_frame_back.png           resources/skin/ui_slider_left.png \
 resources/skin/hud_hullstr.png           resources/skin/ui_frame_left.png           resources/skin/ui_slider_right.png \
 resources/skin/hud_hullstr_rightbar.png  resources/skin/ui_frame_low_left.png       resources/skin/ui_textbox.png \
 resources/skin/hud_radarnav.png          resources/skin/ui_frame_low.png            resources/skin/ui_wnd_back.png \
 resources/skin/hud_shieldintegrity.png   resources/skin/ui_frame_low_right.png      resources/skin/ui_wnd_left.png \
 resources/skin/inactive-tab-left.png     resources/skin/ui_frame_right.png          resources/skin/ui_wnd_low_left.png \
 resources/skin/inactive-tab-middle.png   resources/skin/ui_frame_up_left.png        resources/skin/ui_wnd_low.png \
 resources/skin/inactive-tab-right.png    resources/skin/ui_frame_up.png             resources/skin/ui_wnd_low_right.png \
 resources/skin/ui_frame_up_right.png       resources/skin/ui_wnd_right.png \
 resources/skin/skin.xml                  resources/skin/ui_scrollbar_bg.png         resources/skin/ui_wnd_up_left.png \
 resources/skin/ui_button_mouseover.png   resources/skin/ui_scrollbar_down.png       resources/skin/ui_wnd_up.png \
 resources/skin/ui_button.png             resources/skin/ui_scrollbar_handle_bg.png  resources/skin/ui_wnd_up_right.png

